--- a/templates/footer.mustache
+++ b/templates/footer.mustache
@@ -1,5 +1,45 @@
     <!-- Footer. -->
 
+    <footer>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-2">
+            <h5>SkyNinja</h5>
+            <ul>
+              <li>Home</li>
+              <li>Download</li>
+              <li>Donations</li>
+            </ul>
+          </div>
+          <div class="col-lg-2">
+            <h5>Connect</h5>
+            <ul>
+              <li><i class="fa fa-fw fa-envelope"></i> <a href="{{slash_locale}}/contact">Contact</a></li>
+              <li><i class="fa fa-fw fa-twitter"></i> <a href="http://twitter.com/skyninjapp">Twitter</a></li>
+              <li><i class="fa fa-fw fa-facebook"></i> Facebook</li>
+              <li><i class="fa fa-fw fa-google-plus"></i> <a href="https://plus.google.com/114098906513991312153" rel="publisher">Google+</li>
+              <li><i class="fa fa-fw fa-vk"></i> VKontakte</li>
+            </ul>
+          </div>
+          <div class="col-lg-4">
+            <h5>About</h5>
+            <ul>
+              <li>{{footer_made_by}} <a href="http://eigene.in/" target="_blank">{{eigenein_fullname}}</a>.</li>
+              <li>{{footer_hosted_on}} <a href="http://github.com/" target="_blank">GitHub</a>.</li>
+              <li>{{footer_based_on}} <a href="http://getbootstrap.com/" target="_blank">Bootstrap</a>.</li>
+              <li>{{footer_theme_from}} <a href="http://bootswatch.com/" target="_blank">Bootswatch</a>.</li>
+              <li>{{footer_icons_from}} <a href="http://fortawesome.github.io/Font-Awesome/" target="_blank">Font Awesome</a>.</li>
+              <li>{{footer_webfonts_from}} <a href="http://www.google.com/webfonts" target="_blank">Google</a>.</li>
+            </ul>
+          </div>
+          <div class="col-lg-4">
+            <h3>Share</h3>
+            <p>Share this page with your friends!</p>
+          </div>
+        </div>
+      </div>
+    </footer>
+
     <script src="http://yandex.st/jquery/2.1.0/jquery.min.js"></script>
     <script src="http://yandex.st/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 
