--- a/templates/header.mustache
+++ b/templates/header.mustache
@@ -13,7 +13,11 @@
     <link rel="icon" href="/images/SkyNinja-16.png" sizes="16x16" type="image/png">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootswatch/3.1.1/cosmo/bootstrap.min.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
-    <style>body { padding-top: 50px; font-family: Calibri, Candara, Arial, sans-serif; }</style>
+    <style>
+      body { padding-top: 50px; font-family: Calibri, Candara, Arial, sans-serif; }
+      footer { background: #e6e6e6; padding: 25px 0; }
+      footer ul { list-style: none; padding: 0; }
+    </style>
   </head>
   <body>
 
@@ -35,7 +39,7 @@
             <li><a href="{{slash_locale}}/"><i class="fa fa-home fa-fw"></i> {{header_home}}</a></li>
             <li><a href="{{slash_locale}}/download"><i class="fa fa-download fa-fw"></i> {{header_download}}</a></li>
             <li><a href="{{slash_locale}}/donate"><i class="fa fa-btc fa-fw"></i> {{header_donations}}</a></li>
-            <li><a href="{{slash_locale}}/contact"><i class="fa fa-envelope fa-fw"></i> {{header_contact}}</a></li> 
+            <li><a href="{{slash_locale}}/contact"><i class="fa fa-envelope fa-fw"></i> {{header_contact}}</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li class="dropdown">
