--- a/templates/header.mustache
+++ b/templates/header.mustache
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>SkyNinja</title>
+    <title>{{#title}}{{title}} &middot; {{/title}}SkyNinja</title>
     <link rel="apple-touch-icon-precomposed" href="/images/SkyNinja-144.png" sizes="144x144" type="image/png">
     <link rel="apple-touch-icon-precomposed" href="/images/SkyNinja-114.png" sizes="114x114" type="image/png">
     <link rel="apple-touch-icon-precomposed" href="/images/SkyNinja-72.png" sizes="72x72" type="image/png">
