--- a/templates/index.mustache
+++ b/templates/index.mustache
@@ -1,12 +1,23 @@
 {{> header}}
 
-    <div class="row">
-      <div class="col-lg-12">
-        <div class="alert alert-dismissable alert-warning">
-          <h4>Under Construction</h4>
-          <p>Will be available soon!</p>
+    <div class="row medium-padding" style="background: #9700ff; color: white;">
+      <div class="col-lg-1"></div>
+      <div class="col-lg-5">
+        <div class="large-text large-margin">
+          SkyNinja:<br>
+          All-In-One backup tool for Skype
+        </div>
+        <div class="medium-text">
+          Never lose your chats.
+        </div>
+        <div class="medium-margin">
+          <button type="button" class="btn btn-success medium-smaller-text">Download now! <i class="fa fa-download"></i></button>
+          <div>.NET Framework 4.5 required</div>
         </div>
       </div>
+      <div class="col-lg-5">
+      </div>
+      <div class="col-lg-1"></div>
     </div>
 
 {{> footer}}
