--- a/templates/footer.mustache
+++ b/templates/footer.mustache
@@ -1,6 +1,6 @@
     <!-- Footer. -->
 
-    <footer>
+    <footer class="medium-padding">
       <div class="container">
         <div class="row">
           <div class="col-lg-2">
@@ -35,6 +35,8 @@
           <div class="col-lg-4">
             <h3>Share</h3>
             <p>Share this page with your friends!</p>
+            <p>TODO</p>
+            <p>{{eigenein_fullname}} &copy; 2014</p>
           </div>
         </div>
       </div>
