Start from scratch

--- a/templates/footer.mustache
+++ b/templates/footer.mustache
@@ -1,49 +1,8 @@
     <!-- Footer. -->
 
-    <footer class="medium-padding">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-2">
-            <h4>SkyNinja</h4>
-            <ul>
-              <li><i class="fa fa-home fa-fw"></i> <a href="{{slash_locale}}/">{{header_home}}</a></li>
-              <li><i class="fa fa-download fa-fw"></i> <a href="{{slash_locale}}/download">{{header_download}}</a></li>
-              <li><i class="fa fa-btc fa-fw"></i> <a href="{{slash_locale}}/donate">{{header_donations}}</a></li>
-            </ul>
-          </div>
-          <div class="col-lg-2">
-            <h4>Connect</h4>
-            <ul>
-              <li><i class="fa fa-fw fa-envelope"></i> <a href="{{slash_locale}}/contact">Contact</a></li>
-              <li><i class="fa fa-fw fa-twitter"></i> <a href="https://twitter.com/skyninjapp" target="_blank">Twitter</a></li>
-              <li><i class="fa fa-fw fa-facebook"></i> <a href="https://www.facebook.com/pages/SkyNinja/834438353239570" target="_blank">Facebook</a></li>
-              <li><i class="fa fa-fw fa-google-plus"></i> <a href="https://plus.google.com/114098906513991312153" rel="publisher">Google+</a></li>
-              <li><i class="fa fa-fw fa-vk"></i> <a href="http://vk.com/skyninja" target="_blank">VKontakte</a></li>
-            </ul>
-          </div>
-          <div class="col-lg-4">
-            <h4>About</h4>
-            <ul>
-              <li>{{footer_made_by}} <a href="http://eigene.in/" target="_blank">{{eigenein_fullname}}</a>.</li>
-              <li>{{footer_hosted_on}} <a href="http://github.com/" target="_blank">GitHub</a>.</li>
-              <li>{{footer_based_on}} <a href="http://getbootstrap.com/" target="_blank">Bootstrap</a>.</li>
-              <li>{{footer_theme_from}} <a href="http://bootswatch.com/" target="_blank">Bootswatch</a>.</li>
-              <li>{{footer_icons_from}} <a href="http://fortawesome.github.io/Font-Awesome/" target="_blank">Font Awesome</a>.</li>
-              <li>{{footer_webfonts_from}} <a href="http://www.google.com/webfonts" target="_blank">Google</a>.</li>
-            </ul>
-          </div>
-          <div class="col-lg-4">
-            <h3>Share</h3>
-            <p>Share this page with your friends!</p>
-            <p>TODO</p>
-            <p>{{eigenein_fullname}} &copy; 2014</p>
-          </div>
-        </div>
-      </div>
-    </footer>
+    <footer>
 
-    <script src="http://yandex.st/jquery/2.1.0/jquery.min.js"></script>
-    <script src="http://yandex.st/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+    </footer>
 
   </body>
 </html>
