Header and footer

--- a/templates/header.mustache
+++ b/templates/header.mustache
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" style="overflow-y: scroll">
+<html lang="{{locale}}" style="overflow-y: scroll">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,7 +17,14 @@
   <body>
 
     <nav role="navigation">
-
+      <ul>
+        <li><a href="{{slash_locale}}/" role="banner">SkyNinja</a></li><!--
+     --><li><a href="{{slash_locale}}/"><i class="fa fa-fw fa-home"></i> Home</a></li><!--
+     --><li><a href="{{slash_locale}}/download"><i class="fa fa-fw fa-download"></i> Download</a></li><!--
+     --><li><a href="{{slash_locale}}/donate"><i class="fa fa-fw fa-btc"></i> Donate</a></li><!--
+     --><li><a href="{{slash_locale}}/contact"><i class="fa fa-fw fa-envelope"></i> Contact</a></li><!--
+     --><li><a href="#"><i class="fa fa-fw fa-angle-down"></i> Language</a></li>
+      </ul>
     </nav>
 
     <!-- End header. -->
