--- a/templates/footer.mustache
+++ b/templates/footer.mustache
@@ -1,7 +1,45 @@
     <!-- Footer. -->
 
     <footer>
-
+      <ul>
+        <li>
+          <h6>SkyNinja</h6>
+          <ul>
+            <li><a href="{{slash_locale}}/">Home</a></li>
+            <li><a href="{{slash_locale}}/download">Download</a></li>
+            <li><a href="{{slash_locale}}/donate">Donate</a></li>
+          </ul>
+        </li><!--
+     --><li>
+          <h6>Connect</h6>
+          <ul>
+            <li><a href="{{slash_locale}}/contact">Contact</a></li>
+            <li><a href="#" target="_blank">Facebook</a></li>
+            <li><a href="#" target="_blank">Twitter</a></li>
+            <li><a href="#" target="_blank" rel="publisher">Google+</a></li>
+            <li><a href="#" target="_blank">VK.com</a></li>
+          </ul>
+        </li><!--
+     --><li class="footer-share">
+          <h6>Share</h6>
+          <p>Share this page with your friends.</p>
+          <div id="ya-share"></div>
+          <script type="text/javascript" src="//yandex.st/share/share.js" charset="utf-8"></script>
+          <script>
+            new Ya.share({
+              element: "ya-share",
+              l10n: "{{locale}}",
+              theme: "counter",
+              image: "http://skyninja.im/images/SkyNinja-128.png",
+              elementStyle: {
+                quickServices: ["facebook", "twitter", "vkontakte", "gplus", "moimir", "odnoklassniki"],
+                type: "small"
+              }
+            });
+          </script>
+          <p>{{eigenein_fullname}} &copy; 2014</p>
+        </li>
+      </ul>
     </footer>
 
   </body>
