--- a/templates/index.mustache
+++ b/templates/index.mustache
@@ -1,5 +1,7 @@
 {{> header}}
 
-<div style="height: 100px;"></div>
+<section>
+  <h1><i class="fa fa-fw fa-arrow-circle-o-right"></i> Meet SkyNinja</h1>
+</section>
 
 {{> footer}}
