--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,12 @@
 /* Reset styles. */
-body, html, nav, p, ul, li, a, h1, h6 {
+body, html, nav, p, ul, li, a, h1, h2, h3, h4, h5, h6, pre, code {
   background: transparent; border: 0; font-size: 100%; font-weight: normal; margin: 0; padding: 0; vertical-align: baseline;
 }
-h1, h6 { line-height: 1; }
+h1, h2, h3, h4, h5, h6 { line-height: 1; }
 *, *:before, *:after { -moz-box-sizing: border-box; box-sizing: border-box; }
 html { overflow-y: scroll; }
 article, aside, figure, footer, header, nav, section, details, summary { display: block; }
 ul { list-style: none; }
-small { font-size: 85%; }
 strong { font-weight: bold; }
 button, input, select, textarea { margin: 0; }
 
@@ -51,19 +50,110 @@ body {
   font-size: 14px;
 }
 
+body, a {
+  color: #333;
+}
+
+h1 {
+  padding: 10px 60px;
+}
+
+h2 {
+  font-size: 20px;
+  margin: 40px 60px 10px 60px;
+}
+
+h3 {
+  font-size: 16px;
+  margin: 20px 60px 10px 60px;
+}
+
 h1 {
   -webkit-text-stroke: 1px rgba(0,0,0,0.1);
   border-bottom: 1px solid #F0F0F0;
-  padding: 10px 20px;
   font-size: 24px;
+}
+
+div {
+  margin: 10px 0;
+}
+
+section a {
+  color: #333;
+  border-bottom: 1px dotted #333;
+}
+
+small {
+  font-size: 12px;
+  line-height: 1;
+}
+
+small, small a {
+  color: #808080;
+}
+
+small a:hover {
+  color: #333;
 }
 
 section {
   border-bottom: 1px solid #EAEAEA;
+  padding-bottom: 60px;
+}
+
+section p, section > div, section pre, section > ul {
+  margin: 10px 60px;
+}
+
+section > ul {
+  list-style: disc;
+  list-style-position: inside;
 }
 
 a {
   text-decoration: none;
+}
+
+a.button {
+  padding: 10px;
+  color: white;
+  background: #99CC00;
+  display: inline-block;
+  line-height: 1;
+  border: none;
+}
+
+a.button:hover {
+  -webkit-box-shadow: inset 0 -3px 0 0 #669900;
+     -moz-box-shadow: inset 0 -3px 0 0 #669900;
+          box-shadow: inset 0 -3px 0 0 #669900;
+}
+
+a.button:active {
+  background: #669900;
+}
+
+.large {
+  font-size: 20px;
+}
+
+pre {
+  border: 1px dashed #CCCCCC;
+  padding: 10px;
+}
+
+code {
+  font-family: "Consolas", "Lucida Console", "Courier New" , monospace;
+}
+
+#top-section {
+  padding-top: 60px;
+}
+
+#top-section p:first-child {
+  font-size: 24px;
+  margin-bottom: 60px;
+  line-height: 1;
 }
 
 /* Footer. */
