--- a/templates/index.mustache
+++ b/templates/index.mustache
@@ -1,17 +1,17 @@
 {{> header}}
 
 <section id="top-section">
-  <p>
+  <p style="margin-bottom: 60px; max-width: 700px;">
     <strong>SkyNinja</strong> &mdash; is a simple and easy to use application for exporting your chats and call history from <strong>Skype</strong>.
   </p>
-  <p>
+  <p style="margin-bottom: 60px;">
     <strong>SkyNinja</strong> is currently in beta and has command-line interface only. <a href="{{slash_locale}}/contact">Follow us</a> to get notified about new versions.
   </p>
   <div>
     <a href="http://yadi.sk/d/5dFD55Z-LH7xS" target="_blank" class="large button"><i class="fa fa-download"></i> Download Now!</a>
     <div>
       <small>Command Line Interface Only 0.1 Beta</small><br>
-      <small><a href="http://www.microsoft.com/en-us/download/details.aspx?id=30653" title="Download .NET Framework 4.5" target="_blank"><i class="fa fa-download"></i> .NET Framework 4.5</a> required</small>
+      <small><a href="http://www.microsoft.com/en-us/download/details.aspx?id=30653" title="Download .NET Framework 4.5" target="_blank"><i class="fa fa-download"></i> .NET Framework 4.5</a> is required</small>
     </div>
   </div>
 </section>
