--- a/styles.css
+++ b/styles.css
@@ -69,7 +69,6 @@ h3 {
 }
 
 h1 {
-  -webkit-text-stroke: 1px rgba(0,0,0,0.1);
   border-bottom: 1px solid #F0F0F0;
   font-size: 24px;
 }
@@ -105,6 +104,10 @@ section p, section > div, section pre, section > ul {
   margin: 10px 60px;
 }
 
+section p {
+  line-height: 24px;
+}
+
 section > ul {
   list-style: disc;
   list-style-position: inside;
@@ -122,15 +125,49 @@ a.button {
   line-height: 1;
   border: none;
 }
-
 a.button:hover {
   -webkit-box-shadow: inset 0 -3px 0 0 #669900;
      -moz-box-shadow: inset 0 -3px 0 0 #669900;
           box-shadow: inset 0 -3px 0 0 #669900;
 }
-
 a.button:active {
   background: #669900;
+}
+
+.button-blue {
+  background: #33B5E5 !important;
+}
+.button-blue:hover {
+  -webkit-box-shadow: inset 0 -3px 0 0 #0099CC !important;
+     -moz-box-shadow: inset 0 -3px 0 0 #0099CC !important;
+          box-shadow: inset 0 -3px 0 0 #0099CC !important;
+}
+.button-blue:active {
+  background: #0099CC !important;
+}
+
+.button-blue-inverse {
+  background: #0099CC !important;
+}
+.button-blue-inverse:hover {
+  -webkit-box-shadow: inset 0 -3px 0 0 #33B5E5 !important;
+     -moz-box-shadow: inset 0 -3px 0 0 #33B5E5 !important;
+          box-shadow: inset 0 -3px 0 0 #33B5E5 !important;
+}
+.button-blue-inverse:active {
+  background: #33B5E5 !important;
+}
+
+.button-red {
+  background: #FF4444 !important;
+}
+.button-red:hover {
+  -webkit-box-shadow: inset 0 -3px 0 0 #CC0000 !important;
+     -moz-box-shadow: inset 0 -3px 0 0 #CC0000 !important;
+          box-shadow: inset 0 -3px 0 0 #CC0000 !important;
+}
+.button-red:active {
+  background: #CC0000 !important;
 }
 
 .large {
@@ -152,6 +189,7 @@ code {
 
 #top-section p:first-child {
   font-size: 24px;
+  line-height: 36px;
 }
 
 /* Footer. */
