--- a/templates/download.mustache
+++ b/templates/download.mustache
@@ -1,5 +1,17 @@
 {{> header}}
 
-
+<section id="top-section">
+  <h1><i class="fa fa-fw fa-download"></i> Downloads</h1>
+  <p>
+    <strong>SkyNinja</strong> is currently in beta and has command-line interface only. <a href="{{slash_locale}}/contact">Follow us</a> to get notified about new versions.
+  </p>
+  <div>
+    <a href="http://yadi.sk/d/5dFD55Z-LH7xS" target="_blank" class="large button"><i class="fa fa-download"></i> Download Now!</a>
+    <div>
+      <small>Command Line Interface Only 0.1 Beta</small><br>
+      <small><a href="http://www.microsoft.com/en-us/download/details.aspx?id=30653" title="Download .NET Framework 4.5" target="_blank"><i class="fa fa-download"></i> .NET Framework 4.5</a> is required</small>
+    </div>
+  </div>
+</section>
 
 {{> footer}}
