--- a/templates/header.mustache
+++ b/templates/header.mustache
@@ -14,6 +14,7 @@
     <link rel="icon" href="/images/SkyNinja-16.png" sizes="16x16" type="image/png">
     <link rel="stylesheet" href="/styles.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
+    <script type="text/javascript" src="//yandex.st/share/share.js" charset="utf-8"></script>
   </head>
   <body>
 
