--- a/templates/contact.mustache
+++ b/templates/contact.mustache
@@ -1,14 +1,14 @@
 {{> header}}
 
 <section id="top-section">
-  <h1><i class="fa fa-envelope"></i> Contact Us</h1>
+  <h1><i class="fa fa-envelope"></i> Contact Me</h1>
 
   <h2>Email</h2>
-  <p>If you have any question, comment or feedback, then please do not hesitate to contact us.</p>
+  <p>If you have any question, comment or feedback, then please do not hesitate to contact me.</p>
   <p><a href="mailto:contact@skyninja.im" target="_blank" class="button"><i class="fa fa-fw fa-envelope"></i> Email Us</a></p>
 
   <h2>Social Networks</h2>
-  <p>You may also reach us on social networks.</p>
+  <p>You may also reach me on social networks.</p>
   <p>
     <a href="https://www.facebook.com/pages/SkyNinja/834438353239570" target="_blank" class="button button-blue"><i class="fa fa-fw fa-facebook"></i> {{footer_facebook}}</a><!--
     --><a href="https://plus.google.com/b/114098906513991312153/114098906513991312153" target="_blank" class="button button-red"><i class="fa fa-fw fa-google-plus"></i> Google+</a><!--
