--- a/templates/contact.mustache
+++ b/templates/contact.mustache
@@ -11,7 +11,7 @@
   <p>You may also reach me on social networks.</p>
   <p>
     <a href="https://www.facebook.com/pages/SkyNinja/834438353239570" target="_blank" class="button button-blue"><i class="fa fa-fw fa-facebook"></i> {{footer_facebook}}</a><!--
-    --><a href="https://plus.google.com/b/114098906513991312153/114098906513991312153" target="_blank" class="button button-red"><i class="fa fa-fw fa-google-plus"></i> Google+</a><!--
+    --><a href="https://www.google.com/+SkyninjaImApp?rel=author" target="_blank" class="button button-red"><i class="fa fa-fw fa-google-plus"></i> Google+</a><!--
     --><a href="https://twitter.com/skyninjapp" target="_blank" class="button button-blue"><i class="fa fa-fw fa-twitter"></i> {{footer_twitter}}</a><!--
     --><a href="https://vk.com/skyninja" target="_blank" class="button button-blue-inverse"><i class="fa fa-fw fa-vk"></i> {{footer_vk}}</a>
   </p>
