Short URL for Google+

--- a/templates/footer.mustache
+++ b/templates/footer.mustache
@@ -16,7 +16,7 @@
             <li><a href="{{slash_locale}}/contact">Contact</a></li>
             <li><a href="https://www.facebook.com/pages/SkyNinja/834438353239570" target="_blank">{{footer_facebook}}</a></li>
             <li><a href="https://twitter.com/skyninjapp" target="_blank">{{footer_twitter}}</a></li>
-            <li><a href="https://www.google.com/+SkyninjaImApp?rel=author" target="_blank" rel="publisher">Google+</a></li>
+            <li><a href="https://www.google.com/+SkyninjaImApp" target="_blank" rel="publisher">Google+</a></li>
             <li><a href="https://vk.com/skyninja" target="_blank">{{footer_vk}}</a></li>
           </ul>
         </li><!--
