--- a/templates/index.mustache
+++ b/templates/index.mustache
@@ -8,9 +8,9 @@
     <strong>SkyNinja</strong> is currently in beta and has command-line interface only. <a href="{{slash_locale}}/contact">Follow us</a> to get notified about new versions.
   </p>
   <div>
-    <a href="http://yadi.sk/d/5dFD55Z-LH7xS" target="_blank" class="large button"><i class="fa fa-download"></i> Download Now!</a>
+    <a href="http://yadi.sk/d/pqw020pwLVZ9F" target="_blank" class="large button"><i class="fa fa-download"></i> Download Now!</a>
     <div>
-      <small>Command Line Interface Only 0.1 Beta</small><br>
+      <small>Command Line Interface Only v0.1-20140330</small><br>
       <small><a href="http://www.microsoft.com/en-us/download/details.aspx?id=30653" title="Download .NET Framework 4.5" target="_blank"><i class="fa fa-download"></i> .NET Framework 4.5</a> is required</small>
     </div>
   </div>
