--- a/templates/footer.mustache
+++ b/templates/footer.mustache
@@ -5,9 +5,9 @@
         <li>
           <h6>SkyNinja</h6>
           <ul>
-            <li><a href="{{slash_locale}}/">Home</a></li>
-            <li><a href="{{slash_locale}}/download">Download</a></li>
-            <li><a href="{{slash_locale}}/donate">Donate</a></li>
+            <li><a href="{{slash_locale}}/skyninja/">Home</a></li>
+            <li><a href="{{slash_locale}}/skyninja/download">Download</a></li>
+            <li><a href="{{slash_locale}}/skyninja/donate">Donate</a></li>
           </ul>
         </li><!--
      --><li>
