--- a/templates/donate.mustache
+++ b/templates/donate.mustache
@@ -8,7 +8,7 @@
   </p>
 
   <div>
-    <form action="https://www.paypal.com/cgi-bin/webscr" method="POST" target="_blank">
+    <form action="https://www.paypal.com/cgi-bin/webscr" method="POST" target="_blank" class="donate-form">
       <input type="hidden" name="cmd" value="_s-xclick">
       <input type="hidden" name="hosted_button_id" value="WTJ9Q8N3RE6ZS">
       <input type="submit" class="button button-blue donate-button" value="PayPal">
