--- a/templates/header.mustache
+++ b/templates/header.mustache
@@ -26,11 +26,11 @@
 
     <nav role="navigation">
       <ul>
-        <li><a href="{{slash_locale}}/skyninja/" role="banner">SkyNinja</a></li><!--
-     --><li><a href="{{slash_locale}}/skyninja/"><i class="fa fa-fw fa-home"></i> Home</a></li><!--
-     --><li><a href="{{slash_locale}}/skyninja/download"><i class="fa fa-fw fa-download"></i> Download</a></li><!--
-     --><li><a href="{{slash_locale}}/skyninja/donate"><i class="fa fa-fw fa-btc"></i> Donate</a></li><!--
-     --><li><a href="{{slash_locale}}/skyninja/contact"><i class="fa fa-fw fa-envelope"></i> Contact</a></li><!--
+        <li><a href="/skyninja{{slash_locale}}/" role="banner">SkyNinja</a></li><!--
+     --><li><a href="/skyninja{{slash_locale}}/"><i class="fa fa-fw fa-home"></i> Home</a></li><!--
+     --><li><a href="/skyninja{{slash_locale}}/download"><i class="fa fa-fw fa-download"></i> Download</a></li><!--
+     --><li><a href="/skyninja{{slash_locale}}/donate"><i class="fa fa-fw fa-btc"></i> Donate</a></li><!--
+     --><li><a href="/skyninja{{slash_locale}}/contact"><i class="fa fa-fw fa-envelope"></i> Contact</a></li><!--
      --><!--<li><a href="#"><i class="fa fa-fw fa-angle-down"></i> Language</a></li>-->
       </ul>
     </nav>
