--- a/templates/donate.mustache
+++ b/templates/donate.mustache
@@ -8,6 +8,7 @@
   </p>
 
   <div>
+    <a href="https://www.coinbase.com/checkouts/7dccbfe73cc437ef30544df40bf91644" target="_blank" class="button button-blue donate-button">Bitcoins</a>
     <form action="https://www.paypal.com/cgi-bin/webscr" method="POST" target="_blank" class="donate-form">
       <input type="hidden" name="cmd" value="_s-xclick">
       <input type="hidden" name="hosted_button_id" value="WTJ9Q8N3RE6ZS">
